--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,62 +5,59 @@
  * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
  *
  * =========================================================================== */
- 
+
 /* -----------------------------------------------------------------------------
  * Keyframes
  * -------------------------------------------------------------------------- */
- /*
+/*
 Arc-Dark Color Scheme
 */
 
 @define-color highlight #5294e2;
 @define-color base1  #191b20;
 
- 
- 
 @keyframes blink-warning {
-    70% {
-        color: white;
-    }
- 
-    to {
-        color: white;
-        background-color: orange;
-    }
+  70% {
+    color: white;
+  }
+
+  to {
+    color: white;
+    background-color: orange;
+  }
 }
- 
+
 @keyframes blink-critical {
-    70% {
-      color: white;
-    }
- 
-    to {
-        color: white;
-        background-color: red;
-    }
+  70% {
+    color: white;
+  }
+
+  to {
+    color: white;
+    background-color: red;
+  }
 }
- 
- 
+
 /* -----------------------------------------------------------------------------
  * Base styles
  * -------------------------------------------------------------------------- */
- 
+
 /* Reset all styles */
 * {
-    border: none;
-    border-radius: 0;
-    min-height: 0;
-    margin: 1px;
-    padding: 0;
+  border: none;
+  border-radius: 0;
+  min-height: 0;
+  padding: 0;
 }
 
 /* The whole bar */
 #waybar {
-    background: transparent;
-    color: #bebebe;
-    background-color: @base1;
-    font-family: UbuntuMono;
-    font-size: 14px;
+  background: transparent;
+  color: #bebebe;
+  background-color: @base1;
+  font-family: UbuntuMono;
+  font-size: 14px;
+  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 }
 
 /* Each module */
@@ -77,134 +74,125 @@ Arc-Dark Color Scheme
 #temperature,
 #tray,
 #idle_inhibitor,
-#custom-PBPbattery{
-      padding:0.5rem 0.6rem;
-      margin: 1px 0px;
+#custom-PBPbattery {
+  padding: 5px 0.6rem;
+  margin: 0px 0px;
 }
 
-
- 
- 
 /* -----------------------------------------------------------------------------
  * Module styles
  * -------------------------------------------------------------------------- */
- 
+
 #battery {
-        
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-}
- 
-#battery.warning {
-        color: orange;
-}
- 
-#battery.critical {
-        color: red;
-}
- 
-#battery.warning.discharging {
-        animation-name: blink-warning;
-        animation-duration: 3s;
-}
- 
-#battery.critical.discharging {
-        animation-name: blink-critical;
-        animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
-#cpu{
- 
+#battery.warning {
+  color: orange;
+}
+
+#battery.critical {
+  color: red;
+}
+
+#battery.warning.discharging {
+  animation-name: blink-warning;
+  animation-duration: 3s;
+}
+
+#battery.critical.discharging {
+  animation-name: blink-critical;
+  animation-duration: 2s;
+}
+
+#cpu {
 }
 #cpu.warning {
-        color: orange;
-}
- 
-#cpu.critical {
-        color: red;
-}
- 
-#memory {
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-}
- 
-#memory.warning {
-        color: orange;
- }
- 
-#memory.critical {
-        color: red;
-        animation-name: blink-critical;
-        animation-duration: 2s;
-        padding-left:5px;
-        padding-right:5px;
-}
- 
-#mode {
-    background: @highlight;
-    border-bottom: 3px transparent;
-    color:white;
-    margin-left: 5px;
-    padding:7;
-  }
- 
-#network.disconnected {
-        color: orange;
+  color: orange;
 }
 
-#pulseaudio{
-padding-top:6px;
-} 
+#cpu.critical {
+  color: red;
+}
+
+#memory {
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#memory.warning {
+  color: orange;
+}
+
+#memory.critical {
+  color: red;
+  animation-name: blink-critical;
+  animation-duration: 2s;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#mode {
+  background: @highlight;
+  border-bottom: 3px transparent;
+  color: white;
+  margin-left: 5px;
+  padding: 7;
+}
+
+#network.disconnected {
+  color: orange;
+}
+
+#pulseaudio {
+}
 #pulseaudio.muted {
-    color: @highlight; 
+  color: @highlight;
 }
- 
+
 #temperature.critical {
-        color: red;
+  color: red;
 }
- 
+
 #window {
-        font-weight: bold;
+  font-weight: bold;
 }
- 
-#workspaces{
-font-size:13px;
+
+#workspaces {
+  font-size: 13px;
 }
 #workspaces button {
-    border-bottom: 3px solid transparent;
-    margin-bottom: 0px;
-    padding:0px;
-    
+  margin-bottom: 0px;
+  padding: 0px;
+  padding-bottom: 3px;
+  padding-top: 3px;
 }
 
 #workspaces button.focused {
-     border-bottom: 3px solid  @highlight;
-     margin-bottom: 1px;
-     padding-left:0;
-  }
+  background: rgba(255, 255, 255, 0.09);
+  font-weight: 800;
+}
 
 #workspaces button.urgent {
-        border-color: #c9545d;
-        color: #c9545d;
-}
- 
-#custom-power{
-   margin-left:15px;
-   margin-right:15px;
-   font-size:15px;
-}   
-#custom-launcher{
-   font-size:15px;
-   margin-left:15px;
-   margin-right:10px;
- }   
-
-#backlight.icon{
- padding-right:1px;
- font-size: 13px;	
+  border-color: #c9545d;
+  color: #c9545d;
 }
 
+#custom-power {
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 15px;
+}
+#custom-launcher {
+  font-size: 13px;
+  margin-left: 15px;
+  margin-right: 10px;
+}
 
+#backlight.icon {
+  padding-right: 1px;
+  font-size: 13px;
+}
